--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,3 @@
-
 /*Google fonts
 *Roboto
 *Rampart One
@@ -7,7 +6,77 @@
 
 
 /*inställningar body, html*/
-body, html{
+body,
+html {
     padding: 0;
     margin: 0;
+    font-family: "Roboto", sans-serif;
+}
+
+/* Header */
+
+.header-container {
+    background-color: #F7A4A4;
+    text-align: center;
+}
+
+.nav-left .current,
+.nav-right .current{
+ border-bottom: 2px solid black;
+ border-radius: 2px;
+}
+
+.logo img {
+    width: 25%;
+    max-width: 500px;
+    padding: 1em;
+}
+
+.nav-right {
+    position: relative;
+    top: 35px;
+    margin-left: 0.5em;
+}
+
+.nav-left {
+    position: relative;
+    top: 35px;
+    margin-right: 0.5em;
+}
+
+.nav-left,
+.nav-right,
+.logo {
+    display: inline;
+    vertical-align: middle;
+}
+
+.nav-left ul,
+.nav-right ul {
+    display: inline;
+    margin: 0;
+    padding: 0;
+    font-family: "Rampart One", sans-serif;
+    font-size: 2em;
+}
+
+.nav-left li,
+.nav-right li {
+    display: inline-block;
+    list-style-type: none;
+    padding: 0.4em;
+}
+
+
+.nav-left a,
+.nav-right a {
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
+    transition: transform 0.5s ease
+}
+.nav-left a:hover,
+.nav-right a:hover{
+    transform: scale(1.1);
 }
