--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -81,3 +81,50 @@ html {
 .nav-right a:hover{
     transform: scale(1.1);
 }
+
+
+/* Footer */
+
+footer{
+    background-color: #F7CFCF;
+    text-align: center;
+    padding: 1em;
+}
+
+footer h3{
+    font-weight: 300;
+    font-size: 1.3em;
+}
+
+.admin-link{
+    color: black;
+    font-weight: 300;
+    font-size: 1.2em;
+    text-decoration: none;
+}
+
+.admin-link:hover{
+    text-decoration: underline;
+}
+
+i{
+    color: #F77171;
+    font-size: 3em;
+    padding: 0 0.5em 1em 0.5em;
+}
+
+.footer-nav ul li{
+display: inline-block;
+font-family: "Rampart One", sans-serif;
+padding: 0 0.5em 0.5em 0.5em;
+font-size: 1.7em;
+}
+
+.footer-nav a{
+    color: black;
+    text-decoration: none;
+}
+
+.footer-nav a:hover{
+    border-bottom: 2px solid black;
+}
