--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,9 +22,9 @@ html {
 }
 
 .nav-left .current,
-.nav-right .current{
- border-bottom: 2px solid black;
- border-radius: 2px;
+.nav-right .current {
+    border-bottom: 2px solid black;
+    border-radius: 2px;
 }
 
 .logo img {
@@ -77,54 +77,60 @@ html {
     text-transform: uppercase;
     transition: transform 0.5s ease
 }
+
 .nav-left a:hover,
-.nav-right a:hover{
+.nav-right a:hover {
     transform: scale(1.1);
 }
 
 
 /* Footer */
 
-footer{
+footer {
     background-color: #F7CFCF;
     text-align: center;
     padding: 1em;
 }
 
-footer h3{
+footer h3 {
     font-weight: 300;
     font-size: 1.3em;
 }
 
-.admin-link{
+.admin-link {
     color: black;
     font-weight: 300;
     font-size: 1.2em;
     text-decoration: none;
 }
 
-.admin-link:hover{
+.admin-link:hover {
     text-decoration: underline;
 }
 
-i{
+i {
     color: #F77171;
     font-size: 3em;
     padding: 0 0.5em 1em 0.5em;
 }
 
-.footer-nav ul li{
-display: inline-block;
-font-family: "Rampart One", sans-serif;
-padding: 0 0.5em 0.5em 0.5em;
-font-size: 1.7em;
+.footer-nav ul li {
+    display: inline-block;
+    font-family: "Rampart One", sans-serif;
+    padding: 0 0.5em 0.5em 0.5em;
+    font-size: 1.7em;
 }
 
-.footer-nav a{
+.footer-nav a {
     color: black;
     text-decoration: none;
 }
 
-.footer-nav a:hover{
+.footer-nav a:hover {
     border-bottom: 2px solid black;
+}
+
+/* Startsida */
+.hero-img img{
+    width: 100%;
 }
