--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -309,41 +309,85 @@ main {
     grid-template-columns: 1fr 1fr 1fr;
     max-width: 900px;
     margin: 0 auto;
-    margin-top:  10em;
+    margin-top: 10em;
 }
 
-.menu-list h3{
+.menu-list h3 {
     font-weight: 300;
     text-transform: uppercase;
 }
 
-.menu-list article{
+.menu-list article {
     margin-bottom: 3em;
 }
 
 /* Om oss */
 
-.about-container{
+.about-container {
     display: flex;
     justify-content: center;
     width: 100%;
 }
 
-.about-container img{
+.about-container img {
     width: 100%;
     max-width: 500px;
 }
 
-.about-container article{
+.about-container article {
     max-width: 700px;
     line-height: 2em;
     font-size: 1.2em;
     margin-bottom: 2em;
 }
 
-.about-main h1{
-font-family: "Rampart one", sans-serif;
-font-size: 3em;
-text-align: center;
-padding-top: 1.5em;
+.about-main h1 {
+    font-family: "Rampart one", sans-serif;
+    font-size: 3em;
+    text-align: center;
+    padding-top: 1.5em;
+}
+
+/* Logga in */
+
+.login-form{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+
+.login-form h1 {
+    font-family: "Rampart One", sans-serif;
+    padding-top: 1.5em;
+    font-size: 3em;
+    margin-bottom: 1.5em;
+}
+
+.login-form input {
+    height: 30px;
+    border: 1px solid black;
+    border-radius: 3px;
+    width: 300px;
+    margin-bottom: 3em;
+}
+
+.login-form button {
+    background-color: #F7A4A4;
+    border: none;
+    font-size: 1.3em;
+    border-radius: 3px;
+    cursor: pointer;
+    padding: 0.5em 2em 0.5em 2em;
+    box-shadow: 0 4 4 0 rgba(0, 0, 0, 0.3);
+    margin-bottom: 5em;
+    width: 300px;
+}
+
+.login-form button:hover {
+    box-shadow: none;
+       cursor: pointer;
+}
+
+.login-form label{
+    font-size: 1.3em;
 }
