--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -350,10 +350,10 @@ main {
 
 /* Logga in */
 
-.login-form{
-   display: flex;
-   flex-direction: column;
-   align-items: center;
+.login-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .login-form h1 {
@@ -385,9 +385,44 @@ main {
 
 .login-form button:hover {
     box-shadow: none;
-       cursor: pointer;
+    cursor: pointer;
 }
 
-.login-form label{
+.login-form label {
     font-size: 1.3em;
 }
+
+/* staffsite */
+
+.staffsite-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.staffsite-container h1 {
+    font-family: "Rampart One", sans-serif;
+    font-size: 3em;
+    padding-top: 2em;
+}
+
+.staffsite-container p {
+    font-size: 1.3em;
+}
+
+.staffsite-container a {
+    display: inline-block;
+    width: 200px;
+    text-align: center;
+    background-color: #F7A4A4;
+    border: none;
+    font-size: 1.2em;
+    border-radius: 3px;
+    cursor: pointer;
+    padding: 1em 0.5em 1em 0.5em;
+    box-shadow: 0 4 4 0 rgba(0, 0, 0, 0.3);
+    margin-bottom: 5em;
+    text-decoration: none;
+    color: black;
+    margin: 2.5em 3em 7em 3em;
+    }
