--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -112,7 +112,7 @@ footer h3 {
     text-decoration: underline;
 }
 
-i {
+footer i {
     color: #F77171;
     font-size: 3em;
     padding: 0 0.5em 1em 0.5em;
@@ -445,6 +445,13 @@ main {
     font-size: 3em;
 }
 
+.update-menu-container h2 {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 500;
+    padding-bottom: 2em;
+}
+
 .update-menu-container input {
     height: 30px;
     border: 1px solid black;
@@ -465,7 +472,7 @@ main {
     cursor: pointer;
     padding: 0.5em 2em 0.5em 2em;
     box-shadow: 0 4 4 0 rgba(0, 0, 0, 0.3);
-    width: 305px;
+    margin-bottom: 2em;
 }
 
 .add-btn:hover {
@@ -475,6 +482,49 @@ main {
 
 }
 
-.update-menu-container form{
+.update-menu-container form {
     display: none;
+}
+
+.update-menu-container button {
+    background-color: #F7A4A4;
+    border: none;
+    font-size: 1.3em;
+    border-radius: 3px;
+    cursor: pointer;
+    padding: 0.5em 2em 0.5em 2em;
+    box-shadow: 0 4 4 0 rgba(0, 0, 0, 0.3);
+    margin: 0 0.5em 0 0.5em;
+}
+
+.update-menu-container button:hover {
+    box-shadow: none;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.admin-menu {
+    background-color: #F7CFCF;
+    padding: 2em 4em 2em 4em;
+    border-radius: 10px;
+    box-shadow: 0 4 4 0 rgba(0, 0, 0, 0.3);
+    margin-top: 2em;
+    margin-bottom: 2em
+}
+
+.admin-nav{
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.admin-nav ul {
+    padding-top: 6em;
+    list-style-type: none;
+    
+
+}
+
+.admin-nav li a {
+    font-size: 1.2em;
+    color: black;
 }
