--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -434,34 +434,35 @@ main {
 
 /* Uppdatera Meny */
 
-.update-menu-container {
+.update-container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.update-menu-container h1 {
+.update-container h1 {
     font-family: "Rampart One", sans-serif;
     font-size: 3em;
 }
 
-.update-menu-container h2 {
+.update-container h2 {
     text-align: center;
     text-transform: uppercase;
     font-weight: 500;
-    padding-bottom: 2em;
+    padding-bottom: 1em;
 }
 
-.update-menu-container input {
+.update-container input {
     height: 30px;
     border: 1px solid black;
     border-radius: 3px;
-    width: 300px;
+    width: 400px;
     margin-bottom: 1em;
 }
 
-.update-menu-container label {
+.update-container label {
     font-size: 1.3em;
+    margin-bottom: -0.8em;
 }
 
 .add-btn {
@@ -470,7 +471,6 @@ main {
     font-size: 1.3em;
     border-radius: 3px;
     cursor: pointer;
-    padding: 0.5em 2em 0.5em 2em;
     box-shadow: 0 4 4 0 rgba(0, 0, 0, 0.3);
     margin-bottom: 2em;
 }
@@ -479,25 +479,23 @@ main {
     box-shadow: none;
     text-decoration: underline 2px;
     cursor: pointer;
-
 }
 
-.update-menu-container form {
-    display: none;
+.toggle-btn {
+    margin-bottom: 2em;
 }
 
-.update-menu-container button {
+.update-container button {
     background-color: #F7A4A4;
     border: none;
     font-size: 1.3em;
     border-radius: 3px;
     cursor: pointer;
-    padding: 0.5em 2em 0.5em 2em;
+    padding: 0.5em 1em 0.5em 1em;
     box-shadow: 0 4 4 0 rgba(0, 0, 0, 0.3);
-    margin: 0 0.5em 0 0.5em;
 }
 
-.update-menu-container button:hover {
+.update-container button:hover {
     box-shadow: none;
     cursor: pointer;
     text-decoration: underline;
@@ -505,26 +503,55 @@ main {
 
 .admin-menu {
     background-color: #F7CFCF;
-    padding: 2em 4em 2em 4em;
+    padding: 1.5em 3em 1.5em 3em;
     border-radius: 10px;
     box-shadow: 0 4 4 0 rgba(0, 0, 0, 0.3);
-    margin-top: 2em;
-    margin-bottom: 2em
+    margin-top: em;
+    margin-bottom: 2em;
+    max-width: 400px;
 }
 
-.admin-nav{
+.admin-menu button {
+    margin: 0 1em 0 1em;
+}
+
+.admin-nav {
     max-width: 1000px;
     margin: 0 auto;
 }
 
 .admin-nav ul {
-    padding-top: 6em;
+    padding-top: 5em;
     list-style-type: none;
-    
-
 }
 
 .admin-nav li a {
     font-size: 1.2em;
     color: black;
+}
+
+.update-container form {
+    display: none;
+}
+
+/* Hantera kommentarer */
+
+.admin-comment-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2em;
+}
+
+.admin-comment {
+    background-color: #F7CFCF;
+    padding: 1em 2em 1.5em 2em;
+    border-radius: 10px;
+    box-shadow: 0 4 4 0 rgba(0, 0, 0, 0.3);
+    margin-top: 1em;
+    margin-bottom: 2em;
+    max-width: 400px;
+}
+
+.admin-comment button {
+    margin-top: 0.5em;
 }
