--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -274,6 +274,12 @@ main {
     margin-bottom: 0.2em;
 }
 
+.errorMessage{
+    color: red;
+    font-weight: 500;
+    font-size: 1.2em;
+}
+
 /* Meny */
 
 .menu-container {
